[gd_scene load_steps=10 format=3 uid="uid://dtw6obm6lmpng"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_rdaht"]
[ext_resource type="FontFile" uid="uid://duatcmyng8p2d" path="res://assets/fonts/chinese rocks rg.otf" id="2_bwg6y"]
[ext_resource type="LabelSettings" uid="uid://xd8rgjv5gtlp" path="res://resources/standard_label_settings.tres" id="3_6lbk3"]
[ext_resource type="Texture2D" uid="uid://esoutmox2yhs" path="res://assets/structures/disk_new.png" id="4_n3fo8"]
[ext_resource type="Texture2D" uid="uid://bx0pn8txbr2wx" path="res://assets/character/Rumbler.png" id="5_4qlkr"]
[ext_resource type="Texture2D" uid="uid://bu7ldqi1qg1bf" path="res://assets/structures/pillar_new.png" id="5_or4b6"]
[ext_resource type="Texture2D" uid="uid://cf8a6htdc168p" path="res://assets/character/Rumbler_straight.png" id="6_ymcde"]
[ext_resource type="Script" path="res://scenes/screens/PauseMenu.gd" id="8_aofh8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_opojv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_4qlkr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"explode",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"hold",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"kick",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_ymcde")
}],
"loop": true,
"name": &"straight",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"uppercut",
"speed": 5.0
}]

[node name="Game" type="Node2D" node_paths=PackedStringArray("gear_label", "shop_label_1", "shop_label_2", "shop", "shop_button", "boulder_label", "wall_label", "player_sprite", "saving_label", "save_timer", "pause_menu", "disk_timer", "disk_label", "disk_name_label", "disk_sprite", "pillar_timer", "pillar_label", "pillar_name_label", "pillar_sprite")]
script = ExtResource("1_rdaht")
gear_label = NodePath("GearCoinLabel")
shop_label_1 = NodePath("Shop/TabContainer/Structures/Label")
shop_label_2 = NodePath("Shop/TabContainer/Modifiers/Label2")
shop = NodePath("Shop")
shop_button = NodePath("ShopButton")
boulder_label = NodePath("Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer2/Label2")
wall_label = NodePath("Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer3/Label2")
player_sprite = NodePath("Player")
saving_label = NodePath("SavingLabel")
save_timer = NodePath("SaveTimer")
pause_menu = NodePath("PauseMenu")
disk_timer = NodePath("Structure Timers/DiskTimer")
disk_label = NodePath("Shop/TabContainer/Structures/VBoxContainer/HBoxContainer/Label2")
disk_name_label = NodePath("Shop/TabContainer/Structures/VBoxContainer/HBoxContainer/Label")
disk_sprite = NodePath("Disk")
pillar_timer = NodePath("Structure Timers/PillarTimer")
pillar_label = NodePath("Shop/TabContainer/Structures/VBoxContainer/HBoxContainer2/Label2")
pillar_name_label = NodePath("Shop/TabContainer/Structures/VBoxContainer/HBoxContainer2/Label")
pillar_sprite = NodePath("Pillar")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(560, 315)

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_top = -1.0
offset_right = 1094.0
offset_bottom = 587.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.02328, 1.07143)
color = Color(0.322442, 0.678822, 0.762932, 1)

[node name="GearCoinLabel" type="Label" parent="."]
offset_left = 7.0
offset_top = 8.0
offset_right = 206.0
offset_bottom = 56.0
text = "Gear Coins: 0"
label_settings = ExtResource("3_6lbk3")

[node name="Disk" type="Sprite2D" parent="."]
position = Vector2(430, 414)
texture = ExtResource("4_n3fo8")

[node name="Pillar" type="Sprite2D" parent="."]
position = Vector2(428, 455)
texture = ExtResource("5_or4b6")

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(337, 322)
sprite_frames = SubResource("SpriteFrames_opojv")

[node name="Ground" type="ColorRect" parent="."]
offset_left = -2.0
offset_top = 376.0
offset_right = 1121.0
offset_bottom = 630.0
color = Color(0.862368, 0.74564, 0.543697, 1)

[node name="ShopButton" type="Button" parent="."]
offset_left = 968.0
offset_top = 2.0
offset_right = 1120.0
offset_bottom = 71.0
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 50
text = "Shop"
flat = true

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="Structure Timers" type="Node" parent="."]

[node name="DiskTimer" type="Timer" parent="Structure Timers"]
wait_time = 0.3
one_shot = true

[node name="PillarTimer" type="Timer" parent="Structure Timers"]
wait_time = 5.0
one_shot = true

[node name="Shop" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Shop"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.71303, 0.611522, 0.545067, 1)

[node name="TabContainer" type="TabContainer" parent="Shop"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 35

[node name="Structures" type="TabBar" parent="Shop/TabContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwg6y")

[node name="Label" type="Label" parent="Shop/TabContainer/Structures"]
layout_mode = 2
offset_left = 870.0
offset_top = -50.0
offset_right = 1069.0
offset_bottom = -2.0
text = "Gear Coins: 0"
label_settings = ExtResource("3_6lbk3")

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/TabContainer/Structures"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Shop/TabContainer/Structures/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = " Disk"
label_settings = ExtResource("3_6lbk3")

[node name="DiskButton" type="Button" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 35
text = "Buy"

[node name="Label2" type="Label" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "10 Coins"
label_settings = ExtResource("3_6lbk3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Shop/TabContainer/Structures/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = " Pillar"
label_settings = ExtResource("3_6lbk3")

[node name="PillarButton" type="Button" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 35
text = "Buy"
alignment = 2

[node name="Label2" type="Label" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "150 Coins"
label_settings = ExtResource("3_6lbk3")

[node name="HBoxContainer3" type="HBoxContainer" parent="Shop/TabContainer/Structures/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
text = " Boulder"
label_settings = ExtResource("3_6lbk3")

[node name="BoulderButton" type="Button" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 35
text = "Buy"
alignment = 2

[node name="Label2" type="Label" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "1000 Coins"
label_settings = ExtResource("3_6lbk3")

[node name="HBoxContainer4" type="HBoxContainer" parent="Shop/TabContainer/Structures/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = " Wall"
label_settings = ExtResource("3_6lbk3")

[node name="WallButton" type="Button" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 35
text = "Buy"
alignment = 2

[node name="Label2" type="Label" parent="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "20000 Coins"
label_settings = ExtResource("3_6lbk3")

[node name="ExitShopButton" type="Button" parent="Shop/TabContainer/Structures/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="Modifiers" type="TabBar" parent="Shop/TabContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwg6y")

[node name="Label2" type="Label" parent="Shop/TabContainer/Modifiers"]
layout_mode = 2
offset_left = 870.0
offset_top = -51.0
offset_right = 1069.0
offset_bottom = -3.0
text = "Gear Coins: 0"
label_settings = ExtResource("3_6lbk3")

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/TabContainer/Modifiers"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Shop/TabContainer/Modifiers/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.180005, 0.180005, 0.180005, 1)
text = " Disk"
label_settings = ExtResource("3_6lbk3")

[node name="diskartonlineButton" type="Button" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 35
text = "Use"

[node name="Label2" type="Label" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer4"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
text = "150 Coins"
label_settings = ExtResource("3_6lbk3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Shop/TabContainer/Modifiers/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = " Pillar"
label_settings = ExtResource("3_6lbk3")

[node name="PillartButton" type="Button" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 35
text = "Buy"

[node name="Label2" type="Label" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "150 Coins"
label_settings = ExtResource("3_6lbk3")
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Shop/TabContainer/Modifiers/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = " Boulder"
label_settings = ExtResource("3_6lbk3")

[node name="BoulderButton" type="Button" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 35
text = "Buy"
alignment = 2

[node name="Label2" type="Label" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "2000 Coins"
label_settings = ExtResource("3_6lbk3")

[node name="HBoxContainer3" type="HBoxContainer" parent="Shop/TabContainer/Modifiers/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 8
text = " Wall"
label_settings = ExtResource("3_6lbk3")

[node name="WallButton" type="Button" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 35
text = "Buy"
alignment = 2

[node name="Label2" type="Label" parent="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "30000 Coins"
label_settings = ExtResource("3_6lbk3")

[node name="ExitShopButton" type="Button" parent="Shop/TabContainer/Modifiers/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 50
text = "Exit"

[node name="SavingLabel" type="Label" parent="."]
visible = false
offset_left = 3.0
offset_top = 581.0
offset_right = 127.0
offset_bottom = 629.0
text = "Saving..."
label_settings = ExtResource("3_6lbk3")

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("8_aofh8")

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
offset_left = 491.0
offset_top = 217.0
offset_right = 661.0
offset_bottom = 444.0
color = Color(0.776471, 0.588235, 0.411765, 0.788235)

[node name="VBoxContainer2" type="VBoxContainer" parent="PauseMenu/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/ColorRect/VBoxContainer2"]
layout_mode = 2

[node name="YesButton" type="Button" parent="PauseMenu/ColorRect/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 50
text = "Yes"

[node name="NoButton" type="Button" parent="PauseMenu/ColorRect/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 50
text = "No"

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -42.0
offset_right = 82.5
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="RestartButton" type="Button" parent="PauseMenu/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="QuitButton" type="Button" parent="PauseMenu/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwg6y")
theme_override_font_sizes/font_size = 50
text = "Quit"

[connection signal="pressed" from="ShopButton" to="." method="_on_button_pressed"]
[connection signal="timeout" from="SaveTimer" to="." method="_on_save_timer_timeout"]
[connection signal="timeout" from="Structure Timers/DiskTimer" to="." method="_on_disk_timer_timeout"]
[connection signal="timeout" from="Structure Timers/PillarTimer" to="." method="_on_pillar_timer_timeout"]
[connection signal="pressed" from="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer/DiskButton" to="." method="_on_disk_button_pressed"]
[connection signal="pressed" from="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer2/PillarButton" to="." method="_on_pillar_button_pressed"]
[connection signal="pressed" from="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer3/BoulderButton" to="." method="_on_boulder_button_pressed"]
[connection signal="pressed" from="Shop/TabContainer/Structures/VBoxContainer/HBoxContainer4/WallButton" to="." method="_on_wall_button_pressed"]
[connection signal="pressed" from="Shop/TabContainer/Structures/VBoxContainer/ExitShopButton" to="." method="_on_exit_shop_button_pressed"]
[connection signal="pressed" from="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer4/diskartonlineButton" to="." method="_on_diskartonline_button_pressed"]
[connection signal="pressed" from="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer/PillartButton" to="." method="_on_pillart_button_pressed"]
[connection signal="pressed" from="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer2/BoulderButton" to="." method="_on_boulder_button_pressed"]
[connection signal="pressed" from="Shop/TabContainer/Modifiers/VBoxContainer/HBoxContainer3/WallButton" to="." method="_on_wall_button_pressed"]
[connection signal="pressed" from="Shop/TabContainer/Modifiers/VBoxContainer/ExitShopButton" to="." method="_on_exit_shop_button_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/VBoxContainer2/HBoxContainer/YesButton" to="PauseMenu" method="_on_yes_button_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/VBoxContainer2/HBoxContainer/NoButton" to="PauseMenu" method="_on_no_button_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/VBoxContainer/ResumeButton" to="PauseMenu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/VBoxContainer/RestartButton" to="PauseMenu" method="_on_restart_button_pressed"]
[connection signal="pressed" from="PauseMenu/ColorRect/VBoxContainer/QuitButton" to="PauseMenu" method="_on_quit_button_pressed"]
